--- a/PianoDiProgetto/sections/marketing.tex
+++ b/PianoDiProgetto/sections/marketing.tex
@@ -45,7 +45,6 @@ Il software è in grado di:
 \end{figure}
 
 Il software si presenta come la migliore soluzione trovata sul mercato ma possiede alcuni importanti difetti: è compatibile solamente per la piattaforma Microsoft Windows, il quale ricopre un'ampia fetta di mercato ma non la totalità, e il prezzo è considerevolmente alto per una singola licenza, 295 USD.
-\newpage
 
 \paragraph{Email2db}
 \url{http://www.email2db.com/email-to-database.aspx}
@@ -82,8 +81,14 @@ Appare evidente come il mercato non disponga di soluzioni efficaci per i suddett
 \subsubsection{Valore aggiunto}
 Dall'analisi dei competitors è emerso come non esista sul mercato un software \emph{multipiattaforma} che soddisfi i bisogni riscontrati nel capitolato; questa è una notevole mancanza in quanto non esiste solo il mondo Microsoft, anzi il mercato dei sistemi operativi sta andando incontro a notevoli cambiamenti, soprattutto con l'avvento dei terminali mobile e di Android; risulta evidente come non basta più coprire la fetta maggiore di pubblico, ma è necessario rendere il prodotto fruibile alla maggior parte delle persone e dei dispositivi.\\
 In secondo luogo con \NOMEPROGETTO{} il gruppo si è prefisso di sfruttare un modello di business diverso da quelli riscontrati per i prodotti concorrenti: l'idea è quella di sviluppare una base software con funzionalità minime, ma perfettamente funzionante, da distribuire ad un prezzo ragionevole, e fornire in seguito le personalizzazioni richieste dai diversi clienti.\\
-In questo modo il prodotto software risulterà essere più semplice da realizzare e più flessibile una volta approdato nel mercato, così facendo si potrà coprire e soddisfare un target di utenza più ampio senza creare una serie di prodotti dedicati ad ogni segmento.\\
+In questo modo il prodotto software risulterà essere più semplice da realizzare e più flessibile una volta approdato nel mercato, così facendo si potrà coprire e soddisfare un target di utenza più ampio senza creare una serie di prodotti dedicati per ogni segmento.
 
 \subsubsection{Distribuzione prodotto}
-%TODO distribuzione elettronica
+Adottare una corretta strategia di distribuzione risulta fondamentale per garantire al prodotto una adeguata visibilità e un consistente numero di vendite tali da rendere remunerativo il progetto.\\
+La natura digitale dei software consente di sfruttare diversi canali di distribuzione al di fuori di quelli canonici: la realizzazione di un package fisico da distribuire nei punti vendita comporta costi non sottovalutabili e rischi difficilmente calcolabili per una gruppo di lavoro emergente quale il nostro.\\
+Pertanto la soluzione più conveniente e facilmente realizzabile consiste nel realizzare un sito web dove presentare e descrivere il prodotto software; presso tale sito sarà anche possibile acquistare il software e scaricare direttamente l'installer in formato elettronico.\\
+Potrebbe risultare conveniente fornire anche una versione di prova per valutare le funzionalità del prodotto in modo da invogliare il possibile utente senza obbligarlo ad un acquisto a scatola chiusa.\\
+
 \subsubsection{Promozione prodotto}
+La promozione del prodotto è un'attività fondamentale durante tutto il suo ciclo di vita, ma in special modo nella fase iniziale, nel momento in cui il prodotto si affaccia sul mercato e ha bisogno di acquisire visibilità da parte dei possibili utilizzatori.\\
+Risulta pertanto indispensabile effettuare una ricerca di possibili partner che sponsorizzino \NOMEPROGETTO{} attraverso i propri siti internet; tali partner dovranno essere scelti attentamente e dovranno avere un target di utenza compatibile con il nostro prodotto.\\
