--- a/PianoDiProgetto/sections/wbs.tex
+++ b/PianoDiProgetto/sections/wbs.tex
@@ -102,7 +102,6 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-
 \paragraph{Fattibilità tecnica}
 \begin{description}
 \item[Descrizione:] fase di valutazione del prodotto che si vuole realizzare dal punto di vista tecnico-tecnologico.
@@ -143,415 +142,292 @@ Per la descrizione dei Work Package di secondo livello verrà utilizzato il segu
 \item[Costo:] \euro{}
 \item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-%TODO
+
 \paragraph{Fattibilità Legale}
 \begin{description}
-\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e
-si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre
-la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che
-lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore\\
-
+\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto legale. Si studiano e si definiscono le strategie eventuali da adottare in difesa del progetto. Si verifica inoltre la possibilità di brevettare il prodotto e di registrare un marchio. Infine si verifica che lo sviluppo non porti alla violazione di alcuna legge o normativa in vigore.
 \item[Responsabile:]
-
-\item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali\\
-
-\item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene
-prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto
-rilascio del prodotto
-
+\item[Input:] conoscenza di eventuali prodotti simili nel mercato e normative/vincoli legali.
+\item[Output:] documento formale che indica la fattibilità dal punto di vista legale. Se viene prevista una buona riuscita allora sono riportate anche le azioni da seguire per il corretto rilascio del prodotto.
 \item[Attività:]
 \begin{itemize}
-\item definizione di un marchio
-\item consulenza esterna legale
-\item prima stesura documento riassuntivo
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item definizione di un marchio;
+\item consulenza esterna legale;
+\item prima stesura documento riassuntivo;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Fattibilità Economica}
 \begin{description}
-\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia
-e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati
-inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene
-studiata la possibilità di ottenere dei finanziamenti esterni 
-
+\item[Descrizione:] fase di analisi del prodotto software sotto l'aspetto economico. Si studia e si valutano i benefici economici che tale progetto potrebbe portare. Vengono stimati inoltre i costi che l'organizzazione dovrebbe sostenere, diretti ed indiretti. Inoltre viene studiata la possibilità di ottenere dei finanziamenti esterni 
 \item[Responsabile:] 
-
-\item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse 
-
-\item[Output:] documento formale che indica la fattibilità dal punto di vista economico.
-All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i
-possibili guadagni ed indicando l'eventuale punto di pareggio.
-
+\item[Input:] conoscenza dei costi diretti ed indiretti delle varie risorse.
+\item[Output:] documento formale che indica la fattibilità dal punto di vista economico. All'interno di questo verrà illustrata la previsione economica del prodotto, illustrando i possibili guadagni ed indicando l'eventuale punto di pareggio.
 \item[Attività:]
 \begin{itemize}
-\item consulenze economiche
-\item stima dei costi, guadagni e gestione
-\item ricerca di eventuali finanziatori
-\item prima stesura documento riassuntivo
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item consulenze economiche;
+\item stima dei costi, guadagni e gestione;
+\item ricerca di eventuali finanziatori;
+\item prima stesura documento riassuntivo;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Analisi dei rischi}
 \begin{description}
-\item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si
-studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di
-sviluppo, così da poterli evitare o quantomeno gestire
-
+\item[Descrizione:] fase di analisi dei rischi riguardanti lo sviluppo del prodotto software. Si studia e si definiscono quali sono i rischi in cui si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
-
-\item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all’interno
-del WP
-
-\item[Output:] documento formale che indica gli eventuali rischi che si possono verificare
-durante le varie fasi di sviluppo del progetto
-
+\item[Input:] esperienze personali, conoscenze di rischi noti e documenti prodotti all'interno del WP.
+\item[Output:] documento formale che indica gli eventuali rischi che si possono verificare durante le varie fasi di sviluppo del progetto.
 \item[Attività:]
 \begin{itemize}
-\item identificazione dei rischi noti
-\item identificazione rischi dovuti alla tipologia del progetto
-\item ricerca di soluzioni
-\item prima stesura documento riassuntivo
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item identificazione dei rischi noti;
+\item identificazione rischi dovuti alla tipologia del progetto;
+\item ricerca di soluzioni;
+\item prima stesura documento riassuntivo;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
 
 \paragraph{Definizione dei casi d'uso}
 \begin{description}
-\item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina
-in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti
-potranno interagire con esso. Successivamente si effettua un’analisi dei rischi sul piano dello sviluppo
-del software, si studia e si definiscono quali sono i rischi nei quali si
-può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomenogestire
-
+\item[Descrizione:]fase di definizione finale delle funzionalità del prodotto. Si determina in modo non ambiguo quali saranno le caratteristiche del software e come gli utenti potranno interagire con esso. Successivamente si effettua un'analisi dei rischi sul piano dello sviluppo del software, si studia e si definiscono quali sono i rischi nei quali si può incombere durante tutte la fasi di sviluppo, così da poterli evitare o quantomeno gestire.
 \item[Responsabile:] 
-
-\item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli
-analisti
-
-\item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità
-definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso
-
+\item[Input: ]documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
+\item[Output:] documento formale che illustra chiaramente ed in modo formale le funzionalità definitive del prodotto finale e come sarà possibile per gli utenti interagire con esso.
 \item[Attività:]
 \begin{itemize}
-\item studio dei documenti in input
-\item riunione fra gli analisti
-\item ricerca di soluzioni a problemi emersi durante l’incontro
-\item prima stesura documento riassuntivo
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item studio dei documenti in input;
+\item riunione fra gli analisti;
+\item ricerca di soluzioni a problemi emersi durante l'incontro;
+\item prima stesura documento riassuntivo;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-
-\item[Costo:] \euro{}
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
-
 
 \paragraph{Definizione dei requisiti}
 \begin{description}
-\item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare
-
+\item[Descrizione:] fase non elementare, composta da altri WP di livello inferiore, allo scopo di definire i requisiti che il prodotto deve possedere e soddisfare.
 \item[Responsabile:] 
-
-\item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli
-analisti
-
-\item[Output:] documento formale ad uso esterno Analisi dei Requisiti
-
+\item[Input:] documentazione prodotta nei WP precedenti ed esperienza personale degli analisti.
+\item[Output:] documento formale ad uso esterno Analisi dei Requisiti.
 \item[Attività:]
 \begin{itemize}
-\item studio dei documenti in input
-\item riunione fra analisti
-\item prima stesura documento riassuntivo
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item studio dei documenti in input;
+\item riunione fra analisti;
+\item prima stesura documento riassuntivo;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Pianificazione qualità del prodotto}
 \begin{description}
-\item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garan-
-tire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per
-aggiungere qualità al prodotto
-
-\item[Responsabile:]  
-
-\item[Input:] politiche e standard di qualità, esperienze passate degli analisti
-\item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli
-standard e le strategie da seguire per aggiungere qualità al prodotto
-
+\item[Descrizione:] fase di identificazione e definizione degli standard da seguire allo scopo di garantire qualità al prodotto. Identificazione delle strategie di controllo da utilizzare per aggiungere qualità al prodotto.
+\item[Responsabile:] 
+\item[Input:] politiche e standard di qualità, esperienze passate degli analisti.
+\item[Output:] documenti formali, Piano di Qualifica e Norme di Progetto, che illustrano gli standard e le strategie da seguire per aggiungere qualità al prodotto.
 \item[Attività:]
 \begin{itemize}
-\item studio degli standard esistenti
-\item definizione degli obiettivi di qualità
-\item pianificazione adattamento standard al progetto
-\item definizione delle strategie di verifica e validazione del software
-\item definizione delle norme di progetto
-\item prima stesura documenti riassuntivi
-\item verifica documenti ed eventuali correzioni
-\item formalizzazione documenti
-\item approvazione
+\item studio degli standard esistenti;
+\item definizione degli obiettivi di qualità;
+\item pianificazione adattamento standard al progetto;
+\item definizione delle strategie di verifica e validazione del software;
+\item definizione delle norme di progetto;
+\item prima stesura documenti riassuntivi;
+\item verifica documenti ed eventuali correzioni;
+\item formalizzazione documenti;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Realizzazione e definizione del database}
 \begin{description}
-\item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase
-di progettazione
-
+\item[Descrizione:] fase di sviluppo e codifica del database secondo quanto definito nella fase di progettazione.
 \item[Responsabile:] 
-
-\item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto,
-Piano di Qualifica ed altra documentazione tecnica
-
-\item[Output:]database realizzato e pienamente funzionante
+\item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
+\item[Output:]database realizzato e pienamente funzionante.
 \item[Attività:]
 \begin{itemize}
-\item studio dei documenti in input
-\item fase di codifica
-\item verifica del codice e delle funzionalità del database
-\item verifica della qualità
-\item approvazione
+\item studio dei documenti in input;
+\item fase di codifica;
+\item verifica del codice e delle funzionalità del database;
+\item verifica della qualità;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
-
 
 \paragraph{Realizzazione interfaccia applicazione}
 \begin{description}
-\item[Descrizione:] fase di sviluppo e codifica dell'interfaccia previste per il software, se-
-condo quanto definito nelle fasi di analisi e progettazione 
-
+\item[Descrizione:] fase di sviluppo e codifica dell'interfaccia previste per il software, secondo quanto definito nelle fasi di analisi e progettazione.
 \item[Responsabile:] 
-
-\item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Proget-
-to, Piano di Qualifica ed altra documentazione tecnica 
-
-\item[Output:] interfaccia realizzata e pienamente funzionante
-
+\item[Input:] Analisi Requisiti, Specifica Tecnica, Definizione di Prodotto, Norme di Progetto, Piano di Qualifica ed altra documentazione tecnica.
+\item[Output:] interfaccia realizzata e pienamente funzionante.
 \item[Attività:]
 \begin{itemize}
-\item studio dei documenti in input
-\item fase di codifica
-\item verifica del codice
-\item verifica della qualità
-\item approvazione
+\item studio dei documenti in input;
+\item fase di codifica;
+\item verifica del codice;
+\item verifica della qualità;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Manuali Utente}
 \begin{description}
-\item[Descrizione:] realizzazione dei manuali utente per il supporto all’utente all'uso dell'interfaccia web. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l’esposizione con possibili soluzioni di problemi 
-
+\item[Descrizione:] realizzazione dei manuali utente per il supporto all'utente all'uso dell'interfaccia. Il manuale illustra le funzionalità del prodotto, il suo utilizzo e l'esposizione di problemi con le possibili soluzioni.
 \item[Responsabile:] 
-
-\item[Input:] interfaccia prodotto 
-
-\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio
-
+\item[Input:] interfaccia prodotto.
+\item[Output:] documento con lo scopo di fornire un supporto agli utenti dopo il rilascio.
 \item[Attività:]
 \begin{itemize}
-\item studio delle funzionalità del software
-\item prima realizzazione manuale
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item studio delle funzionalità del software;
+\item prima realizzazione manuale;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Realizzazione documentazione database}
 \begin{description}
-\item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
-per la realizzazione del database 
-
+\item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto per la realizzazione del database.
 \item[Responsabile:] 
-
-\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del database 
-
-\item[Output:] documento con scopo documentale della codifica del software 
-
+\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del database.
+\item[Output:] documento con scopo documentale della codifica del software.
 \item[Attività:]
 \begin{itemize}
-\item studio documenti in input e del codice prodotto
-\item stesura documentazione per ogni singola unità
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item studio documenti in input e del codice prodotto;
+\item stesura documentazione per ogni singola unità;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-
-
-\paragraph{Documentazione interfaccia web}
+\paragraph{Documentazione interfaccia grafica}
 \begin{description}
-\item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto
-per la realizzazione del interfaccia 
-
+\item[Descrizione:] stesura formale della documentazione riguardante tutto il codice prodotto per la realizzazione del interfaccia grafica.
 \item[Responsabile:] 
-
-\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del interfaccia web
-
-\item[Output:] documento con scopo documentale della codifica del software
-
+\item[Input:] Specifica Tecnica, Definizione di Prodotto e codice software del interfaccia grafica.
+\item[Output:] documento con scopo documentale della codifica del software.
 \item[Attività:]
 \begin{itemize}
-\item studio documenti in input e del codice prodotto
-\item stesura documentazione per ogni singola unità
-\item verifica documento ed eventuali correzioni
-\item formalizzazione documento
-\item approvazione
+\item studio documenti in input e del codice prodotto;
+\item stesura documentazione per ogni singola unità;
+\item verifica documento ed eventuali correzioni;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-
-
-\paragraph{Test unità}
+\paragraph{Test di unità}
 \begin{description}
-\item[Descrizione:] fase di test di tutte le singole unità software prodotte 
-
+\item[Descrizione:] fase di test di tutte le singole unità software prodotte.
 \item[Responsabile:] 
-
-\item[Input:] interfaccia web e Piano di Qualifica
-
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test
-
+\item[Input:] interfaccia grafica e Piano di Qualifica.
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test.
 \item[Attività:]
 \begin{itemize}
-\item studio documento in input
-\item esecuzione dei test
-\item risoluzione eventuali errori rilevati
-\item approvazione dei test
-\item stesura documento riassuntivo
-\item verifica documento
-\item formalizzazione documento
-\item approvazione
+\item studio documento in input;
+\item esecuzione dei test;
+\item risoluzione eventuali errori rilevati;
+\item approvazione dei test;
+\item stesura documento riassuntivo;
+\item verifica documento;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
 
-
-
-\paragraph{Test intero sistema}
+\paragraph{Test di sistema}
 \begin{description}
-\item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti 
-
+\item[Descrizione:] fase di test sulle interazioni fra le singole unità. Si verifica che i comportamenti in seguito alle comunicazioni fra di queste siano quelli previsti.
 \item[Responsabile:] 
-
-\item[Input:] interfaccia web e Piano di Qualifica, documento riassuntivo test di unità 
-
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione 
-
+\item[Input:] interfaccia grafica e Piano di Qualifica, documento riassuntivo test di unità.
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test di integrazione.
 \item[Attività:]
 \begin{itemize}
-\item studio documento Piano di Qualifica e accertamento risultati test di unità
-\item esecuzione dei test
-\item risoluzione eventuali errori rilevati
-\item approvazione dei test
-\item stesura documento riassuntivo
-\item verifica documento
-\item formalizzazione documento
-\item approvazione
+\item studio documento Piano di Qualifica e accertamento risultati test di unità;
+\item esecuzione dei test;
+\item risoluzione eventuali errori rilevati;
+\item approvazione dei test;
+\item stesura documento riassuntivo;
+\item verifica documento;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
-
-
-
 
 \paragraph{Collaudo}
 \begin{description}
-\item[Descrizione:] fase di test dell’intero sistema da effettuare prima del rilascio. Si cercano
-eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti 
-
+\item[Descrizione:] fase di test dell'intero sistema da effettuare prima del rilascio. Si cercano eventuali errori o malfunzionamenti e successivamente si certifica che tutte le funzionalità dichiarate siano presenti.
 \item[Responsabile:] 
-
-\item[Input:] interfaccia web, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti 
-
-\item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti 
-
+\item[Input:] interfaccia grafica, esito dei vari test, Piano di Qualifica e Analisi Dei Requisiti.
+\item[Output:] documento riassuntivo dei risultati ottenuti dai test e dal controllo dei requisiti.
 \item[Attività:]
 \begin{itemize}
-\item studio documenti in input
-\item esecuzione di test di sistema previo utilizzo
-\item risoluzione eventuali errori rilevati
-\item approvazione dei test
-\item controllo dei requisiti soddisfatti
-\item stesura documento riassuntivo
-\item verifica documento
-\item formalizzazione documento
-\item approvazione
+\item studio documenti in input;
+\item esecuzione di test di sistema previo utilizzo;
+\item risoluzione eventuali errori rilevati;
+\item approvazione dei test;
+\item controllo dei requisiti soddisfatti;
+\item stesura documento riassuntivo;
+\item verifica documento;
+\item formalizzazione documento;
+\item approvazione;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
-
-
 
 \paragraph{Promozione del Prodotto}
 \begin{description}
-\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il
-prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand 
-
+\item[Descrizione:] fase di promozione del prodotto realizzato. Si punta a pubblicizzare il prodotto con lo scopo di raggiungere quanti più clienti possibili iniziando a creare un brand.
 \item[Responsabile:] 
-
-\item[Input:] alcune conoscenze di marketing e target clienti 
-
-\item[Output:] slogan, pubblicità scelte di mercato da intraprendere 
-
+\item[Input:] alcune conoscenze di marketing e target clienti.
+\item[Output:] slogan, pubblicità scelte di mercato da intraprendere.
 \item[Attività:]
 \begin{itemize}
-\item ricerca possibili clienti
-\item pubblicità rivolta alla categorie di clienti scelti
+\item ricerca possibili clienti;
+\item pubblicità rivolta alla categorie di clienti scelti;
 \end{itemize}
-\item[Costo:] \euro 
-\item[Tempi di realizzazione:]  giorni lavorativi
+\item[Costo:] \euro{}.
+\item[Tempi di realizzazione:]  giorni lavorativi.
 \end{description}
